--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <p>This site created by Alon Reznik. it uses data from mapbox.com and weathercast.com! </p>
+        <p>This site created by Alon Reznik. it uses data from mapbox.com and weatherstack.com! </p>
     <img class="portrait" src="/img/robot.png">
     </div>
 
