--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,7 +12,7 @@
     <div class="main-content">
         {{>header}}
         <p>This site created by Alon Reznik. it uses data from mapbox.com and weatherstack.com! </p>
-    <img class="portrait" src="/img/robot.png">
+    <img class="portrait" src="/img/me.png">
     </div>
 
     {{>footer}}
