--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -13,7 +13,7 @@
     <div class="main-content">
          {{>header}}
 
-         <p> Use this site to get yor weather!</p>
+         <p> Use this site to get your weather!</p>
 
          <form>
              <input placeholder="Location">
