--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,7 +4,7 @@ body {
     max-width: 650px;
     margin: 0 auto;
     padding: 0 24px;
-
+    background-image: url('/web-server/public/img/cloud.png');
     display: flex;
     flex-direction: column;
     min-height: 100vh;
