--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -6,6 +6,11 @@
     <title>Weather</title>
     <link rel="icon" href="/img/weather.png">
 <link rel="stylesheet" href="css/styles.css"> 
+<style>
+    div {
+        background-image: url('/web-server/public/img/cloud.png');
+    }
+</style>
 </head>
 
 <body>
