--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -7,9 +7,10 @@
     <link rel="icon" href="/img/weather.png">
 <link rel="stylesheet" href="css/styles.css"> 
 <style>
-    div {
-        background-image: url('/web-server/public/img/cloud.png');
-    }
+  body {
+  background-image:url('/web-server/public/img/cloud.png');
+  }
+  </style>
 </style>
 </head>
 
