--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,8 @@
 body {
     color: #333333;
+    background-color: deepskyblue;
     font-family: arial;
-    max-width: 350px;
+    max-width: 255px;
     margin: 0 auto;
     padding: 0 24px;
     display: flex;
@@ -14,7 +15,7 @@ body {
 }
 
 footer {
-   color: #888888;
+   color: #716b6b;
    border-top: 1px solid #eeeeee;
    margin-top: 16px;
    padding: 16px 0;
@@ -31,7 +32,7 @@ h1 {
 }
 
 header a {
-    color: #888888;
+    color: #716b6b;
     margin-right: 16px;
     text-decoration: none;
 }
