--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -53,3 +53,11 @@ button {
     color: white;
     padding: 8px;
 }
+
+.btn {
+    cursor: pointer;
+    border: 1px solid #888888;
+    background: #888888;
+    color: white;
+    padding: 0px;
+}
