--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,5 +1,5 @@
 <header>
- <button id="button">Dark Mode</button>
+ <button id="button" class="btn" onclick="DarkMode()">Dark Mode</button>
     <h1>{{title}}</h1>
     <a href="/">Weather</a>
     <a href="/about">About</a>
@@ -21,5 +21,5 @@ let btnTxt = document.getElementById('button').innerText;
         btnTxt = 'Light-Mode';
        }
     }
-let btnClk = document.getElementById('button').onclick="DarkMode()"
+document.getElementById('button').onclick="DarkMode()"
 </script>
