--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -56,8 +56,8 @@ button {
 
 .btn {
     cursor: pointer;
-    border: 1px solid #888888;
+    border: 2px solid #888888;
     background: #888888;
-    color: white;
-    padding: 0px;
+    color: black;
+    padding: 4px;
 }
