--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -8,7 +8,7 @@
 
 <script>
 let counter = 1;
-document.getElementById('button').addEventListener("click", function DarkMode() {
+document.getElementById('button').addEventListener("click", DarkMode() {
   counter++;
        if (counter % 2 == 0) {
         document.body.style.backgroundColor = '#00bfff';
