--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,5 +1,5 @@
 <header>
- <button id="button" class="btn" onclick="DarkMode()">Dark Mode</button>
+ <button id="button" class="btn">Dark Mode</button>
     <h1>{{title}}</h1>
     <a href="/">Weather</a>
     <a href="/about">About</a>
@@ -8,7 +8,7 @@
 
 <script>
 let counter = 1;
-document.getElementById('button').addEventListener("click", DarkMode() {
+document.getElementById('button').addEventListener("click", function() {
   counter++;
        if (counter % 2 == 0) {
         document.body.style.backgroundColor = '#00bfff';
