--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -56,6 +56,8 @@ button {
 
 .btn {
     cursor: pointer;
+    font-family: ariel;
+    font-style: oblique;
     border: 2px solid #888888;
     background: #888888;
     color: black;
