--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="main-content">
+    <div id="main-content" class="main-content">
         {{>header}}
         <p>This site created by Alon Reznik. it uses data from mapbox.com and weatherstack.com! </p>
     <img class="portrait" src="/img/me.png">
