--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="main-content">
+    <div  id="main-content"class="main-content">
        {{>header}}
     <p>{{helpText}}</p>
     </div>
