--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -5,4 +5,29 @@
     <a href="/about">About</a>
     <a href="/help">Help</a>
 </header>
-<script src="/web-server/public/js/Dark_algo.js"></script>
+
+
+<script>
+  function DarkAlgo(x) {
+    document.body.style.backgroundColor = '#00bfff';
+    document.getElementById('main-content').style.color = '#3d3a3a';
+    document.getElementById('button').innerText = 'Dark-Mode';
+    x = counter +1;
+}
+function LightAlgo(x) {
+    document.body.style.backgroundColor = '#1f1f1f';
+    document.getElementById('main-content').style.color = '#7fffd4';
+    document.getElementById('button').innerText = 'Light-Mode';
+     x = counter +1;
+}
+document.getElementById('button').addEventListener("click", function () {
+    if (counter % 2 == 0) {
+      DarkAlgo(counter)
+      counter++;
+    } else {
+        LightAlgo(counter)
+        counter ++;
+    }
+})
+
+</script>
