--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -9,20 +9,26 @@
 
 <script>
 let counter = 0;
+let temp;
+
+  if (temp > counter) {
+    counter = temp
+  }
 document.getElementById('button').addEventListener("click", function(x) {
   counter++;
+
        if (counter % 2 == 0) {
         document.body.style.backgroundColor = '#00bfff';
         document.getElementById('main-content').style.color = '#3d3a3a';
         document.getElementById('button').innerText = 'Dark-Mode';
-        counter ++;
        console.log(counter)
+       temp = counter;
        } else {
         document.body.style.backgroundColor = '#1f1f1f';
         document.getElementById('main-content').style.color = '#7fffd4';
         document.getElementById('button').innerText = 'Light-Mode';
-        counter++;
         console.log(counter)
+        temp = counter;
        }
 })
 </script>
