--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -8,27 +8,39 @@
 
 
 <script>
-let counter = 0;
-let temp;
+  const fs = require('fs');
+  
 
-  if (temp > counter) {
-    counter = temp
-  }
+  
+const loadSwitches = () => {
+     try{
+      const dataBuffer = fs.readFileSync('/Users/alonr/Desktop/Node-Course/web-server/src/utils/DarkModeBoolean.json')
+      const dataJSON = dataBuffer.toString()
+       return JSON.parse(dataJSON)
+        } catch (e) {
+            return []
+        }
+    }
+
+
+
+
+  const lightSwitch = loadSwitches()
+  const Switch = lightSwitch[0]
+
 document.getElementById('button').addEventListener("click", function(x) {
   counter++;
 
-       if (counter % 2 == 0) {
-        document.body.style.backgroundColor = '#00bfff';
-        document.getElementById('main-content').style.color = '#3d3a3a';
+       if (Switch.Dark === false) {   // if switch is currently on dark mode
+        document.body.style.backgroundColor = '#00bfff';             
+        document.getElementById('main-content').style.color = '#3d3a3a';  // change to light mode
         document.getElementById('button').innerText = 'Dark-Mode';
-       console.log(counter)
-       temp = counter;
-       } else {
-        document.body.style.backgroundColor = '#1f1f1f';
-        document.getElementById('main-content').style.color = '#7fffd4';
+        Switch.Dark = true; 
+       } else {                     // if switch is currently on light mode
+        document.body.style.backgroundColor = '#1f1f1f';            
+        document.getElementById('main-content').style.color = '#7fffd4'; // change to dark mode
         document.getElementById('button').innerText = 'Light-Mode';
-        console.log(counter)
-        temp = counter;
+        Switch.Dark = false
        }
 })
 </script>
