light switch state handler

--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -26,7 +26,13 @@
 
 /* const lightSwitch = loadSwitches()
   const Switch = lightSwitch[0]*/
+ 
+let counter = 0;
+let temp;
 
+  //if (temp > counter) {
+   // counter = temp
+ // }
 document.getElementById('button').addEventListener("click", function(x) {
   counter++;
 
