--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -44,9 +44,9 @@
       temp = counter;
     } else {
       document.body.style.backgroundColor = '#363636';
-      document.getElementById('main-content').style.color = '#c651cd';   // change to dark mode
+      document.getElementById('main-content').style.color = '#8739f9';   // change to dark mode
       document.getElementById('button').innerText = 'Light-Mode';
-      document.getElementById('button').color = '8739f9';
+      document.getElementById('button').color = '#c651cd';
       console.log(counter)
       temp = counter;
     }
